Figure it out !!!!!!!!!!